# manifoldx

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.knowledge/: brainstorming-future.md  lighting-materials-analysis.md  project-analysis.md
.knowledge/analysis/: 2026-05-05-sci-viz-primitives-v1-design.md  2026-05-06-compute-systems-design.md  2026-05-06-sci-viz-primitives-v1-plan-4-altair-shim-design.md  2026-05-08-compute-phase-2-shader-compiler-design.md  2026-05-08-event-driven-system-design.md  2026-05-08-input-events-design.md  2026-05-08-volume-rendering-v1-design.md  2026-05-10-gui-v1-design.md  2026-06-09-textured-pbr-v1-design.md  2026-07-05-ibl-v1-design.md  2026-07-17-shadow-mapping-v1-design.md  2026-07-18-labyrinth-fps-demo-design.md  2026-07-18-multi-caster-shadows-design.md  ecs-rendering-architecture.md  entity-hierarchy.md  implementation-mistakes-bottlenecks.md  (+1 more)
.opencode/: opencode.json  package-lock.json  package.json
examples/: axes_demo.py  boids.py  cube.py  cubes.py  event_dolly.py  event_pulse.py  gas.py  gas_compute.py  gui_demo.py  hello_world.py  ibl_demo.py  input_fly.py  input_orbit.py  labyrinth_fps.py  nbody.py  nbody_compute.py  pbr_demo.py  point_cloud_compute.py  point_cloud_demo.py  scatter_plot.py  shadow_demo.py  smoke_demo.py  spheres.py  spot_demo.py  sun_earth_moon_demo.py  teapot_demo.py  volume_demo.py
know-how/: authoring-an-ecs-component.md
scripts/: gen_brdf_lut.py  gen_teapot_albedo.py  regenerate_colormaps.py
src/manifoldx/: ecs.py  (+19 more)
tests/: conftest.py  test_camera.py  test_command_queueing.py  test_commands.py  test_components.py  test_compute.py  test_compute_integration.py  test_compute_transpile.py  test_compute_transpile_integration.py  test_ecs.py  test_engine.py  test_engine_event_api.py  test_event_async.py  test_event_bus.py  test_event_frame_integration.py  test_event_shutdown.py  test_events_readonly_view.py  test_frame_waiters.py  test_geometry_uvs.py  test_globals_layout.py  test_ibl.py  test_input_bridge.py  test_input_e2e.py  test_input_state.py  test_light_system.py  test_material_base.py  test_multi_instance_pbr.py  test_obj_loader.py  test_physics.py  test_pipeline_cache_keys.py  test_random.py  test_render_mvp.py  test_renderer.py  test_renderer_material.py  test_resources.py  test_shadow.py  test_shadow_render.py  test_standard_material_textured.py  test_systems.py  test_textured_material.py  (+4 more)
(+111 files in other folders)
