[project]
name = "manifoldx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "rendercanvas>=2.6.3",
    "wgpu>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-async>=0.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
