[project]
name = "manifold-gfx"
version = "0.2.0"
description = "Real-time 3D rendering engine with ECS architecture, built on pure wgpu"
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "rendercanvas>=2.6.3",
    "tqdm>=4.67.3",
    "wgpu>=0.31.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
desktop = ["glfw>=2.0"]
offline = [
    "imageio-ffmpeg>=0.5",
]
all = ["glfw>=2.0", "imageio-ffmpeg>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/manifoldx"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F401", "I001", "F841", "E721"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-async>=0.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "manifold-gfx[offline]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
